# lahacks2026

./: .gitignore  PRD.md  README.md  mail_sending_agent_register.py  package-lock.json
.claude/: settings.local.json
PeTTa/: .gitignore  LICENSE  setup.py  test.sh
PeTTa/examples/: and_or.metta  atomops.metta  booleansolver.metta  builin_types.metta  callquoteevalreduce.metta  callquoteevalreduce2.metta  case.metta  case2.metta  casenew.metta  chain.metta  collapse.metta  comments.metta  constanthead.metta  cut.metta  empty.metta  eval.metta  factorial.metta  fib.metta  fibadd.metta  fibsmart.metta  fibsmartimport.metta  foldallspacecount.metta  functionhead.metta  functionhead2.metta  functionremoval.metta  functionremovalspec.metta  git_import.metta  git_import2.metta  (+68 more)
agents/: __init__.py  mail_sending_agent.py  reminder_agent.py  reminder_core.py  task_scheduling_agent.py
backend/: .env.example  README.md  pyproject.toml  pytest.ini
backend/app/: main.py  omegaclaw_bridge.py  reminder_local.py
backend/app/google/: __init__.py  actions.py  confirmation.py  models.py  oauth.py  store.py
backend/app/routers/: google.py  omegaclaw_bridge.py  session.py
backend/app/session/: __init__.py  coordinator.py  event_mapper.py  jpeg_sanity.py  live_adapter.py  logging.py  look_loop.py  protocol.py  resume_store.py  settings.py  state.py
backend/tests/: test_event_mapper.py  test_google_confirmation.py  test_google_oauth.py  test_google_routes.py  test_jpeg_sanity.py  test_live_adapter.py  test_look_loop.py  test_mail_sending_agent_extraction.py  test_mail_sending_agent_formatting.py  test_mail_sending_agent_gmail_send.py  test_mail_sending_agent_protocol.py  test_omegaclaw_bridge_http.py  test_omegaclaw_channel.py  test_omegaclaw_extension_points.py  test_omegaclaw_mail_shim.py  test_omegaclaw_protocol.py  test_omegaclaw_remote_bridge.py  test_omegaclaw_runtime_loop.py  test_omegaclaw_shims.py  test_reminder_agent_protocol.py  test_reminder_local.py  test_resume_store.py  test_session_contract.py  test_session_coordinator.py  test_session_integration.py  test_session_logging.py  test_session_protocol.py  test_session_state.py  test_task_scheduling_agent_calendar_send.py  test_task_scheduling_agent_protocol.py  test_uagents_bridge.py
browser-agent/: agent.py  agent1qvggl2p7v8_data.json  pyproject.toml  server.py
contextlens-agent/: .env.example  README.md  agent.py  context_service.py  describe_service.py  main.py  models.py  requirements.txt
docs/: OMEGACLAW_DOCKER_WORKFLOW.md  _LAHacks2026 - OmegaClaw Instructions.md  omegaclaw_backend_channel_runbook.md  omegaclaw_bridge_runbook.md  omegaclaw_reminders.md  omegaclaw_touchpoints.md
flagship-skill/: .env.example  README.md  agent.py  browserbase_purchase.py  browserbase_worker.py  client.py  main.py  models.py  purchase_client.py  purchase_prompt.py  purchase_rules.py  pyproject.toml  requirements.txt
flagship-skill/people_finder/: __init__.py  apollo.py  chat.py  harness.py  model_harness.py  models.py  settings.py  tools.py
flagship-skill/tests/: test_browserbase_worker.py  test_people_finder.py  test_purchase_agent.py  test_purchase_mcp_server.py
omegaclaw/: README.md  protocol.py  runtime_loop.py
plans/: REAL_OMEGACLAW_INTEGRATION_REVIEW.md
scripts/: gemini_followup_smoke.py  omegaclaw_agent_tool_integration.py  smoke_install.sh
(+106 files in other folders)
