[project]
name = "identify-person-agent"
version = "0.1.0"
description = "ASI:One-compatible Agentverse people-finding agent backed by Apollo search tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.8.0",
    "pydantic>=2.12.0",
    "uagents>=0.22.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
