[project]
name = "browserbase-purchase-agent"
version = "0.1.0"
description = "ASI:One-compatible Agentverse agent with a Browserbase-backed Amazon checkout review skill."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "stagehand>=0.6.0",
    "uagents>=0.17.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
purchase-agent = "agent:agent.run"
purchase-worker = "browserbase_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "agent.py",
    "browserbase_purchase.py",
    "browserbase_worker.py",
    "models.py",
    "purchase_client.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
markers = [
    "integration: real Browserbase or running-worker integration tests",
]
