[project]
name = "local-chrome-purchase-agent"
version = "0.1.0"
description = "ASI:One-compatible Agentverse agent that drives local Playwright MCP for Amazon checkout review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "mcp>=1.13.0",
    "pydantic>=2.0.0",
    "uagents>=0.17.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
purchase-agent = "agent:agent.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "agent.py",
    "models.py",
    "purchase_client.py",
    "purchase_prompt.py",
    "purchase_rules.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
markers = [
    "integration: real local Chrome or MCP integration tests",
]
